# pixel-archives-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  repro_logging.rs
docs/: API.md
src/: lib.rs  main.rs
src/api/: dispatcher.rs  mod.rs  nft_metadata.rs  router.rs  types.rs
src/api/methods/: auth.rs  canvas.rs  mod.rs  nft.rs  pixel.rs
src/api/types/: auth.rs  canvas.rs  common.rs  mod.rs  nft.rs  pixel.rs
src/cache/: keys.rs  local.rs  mod.rs  redis.rs
src/config/: mod.rs
src/db/: mod.rs
src/db/entities/: canvas.rs  mod.rs  user.rs
src/db/migrations/: m20260106_000004_create_collaborators.rs
src/db/repositories/: canvas.rs  pixel.rs  user.rs
src/error/: mod.rs  types.rs
src/infrastructure/cache/: keys.rs  local.rs  mod.rs  redis.rs
src/infrastructure/db/entities/: canvas.rs  canvas_collaborator.rs  pixel.rs
src/infrastructure/db/migrations/: m20260106_000001_create_users.rs  m20260106_000002_create_canvases.rs  m20260106_000003_create_pixels.rs  m20260106_000004_create_collaborators.rs  mod.rs
src/infrastructure/db/repositories/: canvas.rs  mod.rs  pixel.rs  user.rs
src/middleware/: logging.rs  mod.rs  rate_limit.rs
src/services/: mod.rs
src/services/auth/: cookie.rs  jwt.rs  mod.rs  signature.rs
src/services/canvas/: collaboration.rs  lifecycle.rs  mod.rs  types.rs
src/services/nft/: image.rs  mod.rs  types.rs
src/services/pixel/: cooldown.rs  lock.rs  mod.rs  types.rs  validation.rs
src/services/solana/: client.rs  mod.rs  verify.rs
src/utils/: security.rs  server.rs
src/ws/: handler.rs  mod.rs  room.rs  router.rs  types.rs
