[package]
name = "pixel-archives-backend"
version = "0.1.0"
edition = "2024"
authors=["iamprecieee <emmypresh@gmail.com>"]
license-file = "LICENSE"

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[[bin]]
name = "pixel_archives"
path = "src/main.rs"

[lib]
name = "pixel_archives"
path = "src/lib.rs"
