[package]
name = "pixel-archives-backend"
version = "0.1.0"
edition = "2024"
authors=["iamprecieee <emmypresh@gmail.com>"]
license-file = "LICENSE"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
rand = "0.9.2"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.19", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[[bin]]
name = "pixel_archives"
path = "src/main.rs"

[lib]
name = "pixel_archives"
path = "src/lib.rs"
