[package]
name = "pixel-archives-backend"
version = "0.1.0"
edition = "2024"
authors=["iamprecieee <emmypresh@gmail.com>"]
license-file = "LICENSE"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "ws"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
base64 = "0.22.1"
bs58 = "0.5.1"
chrono = { version = "0.4.42", features = ["serde"] }
deadpool-redis = { version = "0.22.0", features = ["tokio-rustls-comp"] }
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures = "0.3.31"
headers = "0.4.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
moka = { version = "0.12.12", features = ["future"] }
rand = "0.9.2"
redis = { version = "1.0.2", features = ["tls-rustls"] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.19", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
solana-client = "3.1.4"
solana-commitment-config = "3.1.0"
solana-sdk = "3.0.0"
solana-transaction-status = "3.1.4"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[[bin]]
name = "pixel_archives"
path = "src/main.rs"

[lib]
name = "pixel_archives"
path = "src/lib.rs"
